--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
 
   <div class="flex justify-center mt-5">
       <div class="w-32 h-auto sm:w-40 md:w-48 lg:w-56">
-          <img src="logo.png" alt="ERB Servicio Técnico Logo" class="block w-full h-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/192x192/cccccc/ffffff?text=Logo';">
+          <img src="/erb-pruebaaas/logo.png" alt="ERB Servicio Técnico Logo" class="block w-full h-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/192x192/cccccc/ffffff?text=Logo';">
       </div>
   </div>
 
@@ -881,7 +881,7 @@
 
   <div class="whatsapp-button-container">
       <a href="https://wa.me/34631449197" class="whatsapp-btn" target="_blank" aria-label="Chatea con nosotros por WhatsApp">
-        <img src="123.png" alt="Icono de WhatsApp" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/24x24/25D366/ffffff?text=WA';">
+        <img src="/erb-pruebaaas/123.png" alt="Icono de WhatsApp" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/24x24/25D366/ffffff?text=WA';">
         <span class="lang-es">Chatea por WhatsApp</span>
         <span class="lang-ca">Xateja per WhatsApp</span>
         <span class="lang-va">Chateja per WhatsApp</span>
@@ -988,19 +988,19 @@
           <span class="lang-va">Marques amb les quals treballem</span>
       </h2>
       <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 max-w-screen-lg mx-auto items-center">
-          <div class="flex justify-center"><img src="samsung-logo-wordmark-rgb.png" alt="Logo Samsung" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Samsung';"></div>
-          <div class="flex justify-center"><img src="lg-logo-1.png" alt="Logo LG" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=LG';"></div>
-          <div class="flex justify-center"><img src="balay.png" alt="Logo Balay" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Balay';"></div>
-          <div class="flex justify-center"><img src="siemens.png" alt="Logo Siemens" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Siemens';"></div>
-          <div class="flex justify-center"><img src="Whirlpool_Corporation_Logo_(as_of_2017).svg.png" alt="Logo Whirlpool" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Whirlpool';"></div>
-          <div class="flex justify-center"><img src="neckar.png" alt="Logo Neckar" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Neckar';"></div>
-          <div class="flex justify-center"><img src="bosch.png" alt="Logo Bosch" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Bosch';"></div>
-          <div class="flex justify-center"><img src="Haier_logo.svg.png" alt="Logo Haier" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Haier';"></div>
-          <div class="flex justify-center"><img src="mitsubishi.png" alt="Logo Mitsubishi Electric" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Mitsubishi';"></div>
-          <div class="flex justify-center"><img src="saunier.png" alt="Logo Saunier Duval" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Saunier Duval';"></div>
-          <div class="flex justify-center"><img src="ariston.jpg" alt="Logo Ariston Thermo Group" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Ariston';"></div>
-          <div class="flex justify-center"><img src="vaillant.jpg" alt="Logo Vaillant" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Vaillant';"></div>
-          <div class="flex justify-center"><img src="junkers.png" alt="Logo Junkers" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Junkers';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/samsung-logo-wordmark-rgb.png" alt="Logo Samsung" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Samsung';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/lg-logo-1.png" alt="Logo LG" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=LG';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/balay.png" alt="Logo Balay" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Balay';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/siemens.png" alt="Logo Siemens" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Siemens';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/Whirlpool_Corporation_Logo_(as_of_2017).svg.png" alt="Logo Whirlpool" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Whirlpool';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/neckar.png" alt="Logo Neckar" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Neckar';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/bosch.png" alt="Logo Bosch" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Bosch';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/Haier_logo.svg.png" alt="Logo Haier" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Haier';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/mitsubishi.png" alt="Logo Mitsubishi Electric" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Mitsubishi';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/saunier.png" alt="Logo Saunier Duval" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Saunier Duval';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/ariston.jpg" alt="Logo Ariston Thermo Group" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Ariston';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/vaillant.jpg" alt="Logo Vaillant" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Vaillant';"></div>
+          <div class="flex justify-center"><img src="/erb-pruebaaas/junkers.png" alt="Logo Junkers" class="h-10 sm:h-12 w-auto" loading="lazy" onerror="this.onerror=null; this.src='https://placehold.co/100x40/cccccc/ffffff?text=Junkers';"></div>
       </div>
   </section>
 
@@ -1013,23 +1013,23 @@
     <div class="mt-2">
         <a href="#" class="lang-es">Política de Privacidad</a><span class="lang-es"> | </span>
         <a href="#" class="lang-es">Aviso Legal</a><span class="lang-es"> | </span>
-        <a href="/1234.html" id="manageCookiesLink" class="lang-es">Gestionar Cookies</a>
+        <a href="/erb-pruebaaas/1234.html" id="manageCookiesLink" class="lang-es">Gestionar Cookies</a>
 
         <a href="#" class="lang-ca">Política de Privacitat</a><span class="lang-ca"> | </span>
         <a href="#" class="lang-ca">Avís Legal</a><span class="lang-ca"> | </span>
-        <a href="/1234.html" id="manageCookiesLinkCa" class="lang-ca">Gestionar Galetes</a>
+        <a href="/erb-pruebaaas/1234.html" id="manageCookiesLinkCa" class="lang-ca">Gestionar Galetes</a>
 
         <a href="#" class="lang-va">Política de Privacitat</a><span class="lang-va"> | </span>
         <a href="#" class="lang-va">Avís Legal</a><span class="lang-va"> | </span>
-        <a href="/1234.html" id="manageCookiesLinkVa" class="lang-va">Gestionar Galetes</a>
+        <a href="/erb-pruebaaas/1234.html" id="manageCookiesLinkVa" class="lang-va">Gestionar Galetes</a>
     </div>
   </footer>
 
   <div id="cookie-banner">
       <div class="cookie-content">
-          <span class="lang-es">Este sitio web utiliza cookies para mejorar la experiencia del usuario. Al utilizar nuestro sitio web, aceptas todas las cookies de acuerdo con nuestra <a href="/1234.html" target="_blank">Política de Cookies</a>.</span>
-          <span class="lang-ca">Aquest lloc web utilitza galetes per millorar l'experiència de l'usuari. En utilitzar el nostre lloc web, acceptes totes les galetes d'acord amb la nostra <a href="/1234.html" target="_blank">Política de Galetes</a>.</span>
-          <span class="lang-va">Aquest lloc web utilitza galetes per millorar l'experiència de l'usuari. En utilitzar el nostre lloc web, acceptes totes les galetes d'acuerdo con la nostra <a href="/1234.html" target="_blank">Política de Galetes</a>.</span>
+          <span class="lang-es">Este sitio web utiliza cookies para mejorar la experiencia del usuario. Al utilizar nuestro sitio web, aceptas todas las cookies de acuerdo con nuestra <a href="/erb-pruebaaas/1234.html" target="_blank">Política de Cookies</a>.</span>
+          <span class="lang-ca">Aquest lloc web utilitza galetes per millorar l'experiència de l'usuari. En utilitzar el nostre lloc web, acceptes totes les galetes d'acord amb la nostra <a href="/erb-pruebaaas/1234.html" target="_blank">Política de Galetes</a>.</span>
+          <span class="lang-va">Aquest lloc web utilitza galetes per millorar l'experiència de l'usuari. En utilitzar el nostre lloc web, acceptes totes les galetes d'acuerdo con la nostra <a href="/erb-pruebaaas/1234.html" target="_blank">Política de Galetes</a>.</span>
       </div>
       <div class="cookie-buttons">
           <button class="accept-btn">
@@ -1048,15 +1048,15 @@
     const translations = {
       es: {
         placeholder: { nombre: "Tu nombre", telefono: "+34 600 000 000", email: "tu@correo.com", mensaje: "Describe el problema" },
-        text: { defaultUbicacion: "Selecciona una ubicación", defaultElectrodomestico: "Selecciona uno", darkMode: "Modo Oscuro", lightMode: "Modo Claro", sending: "Enviando...", viewBrands: "Ver Marcas", aboutUs: "Sobre Nosotros", domestico: "Doméstico", industrial: "Industrial", formSuccess: "¡Gracias! Tu solicitud ha sido enviada. Nos pondremos en contacto contigo pronto.", formError: "Hubo un error al enviar tu solicitud. Por favor, inténtalo de nuevo más tarde.", validationError: "Por favor, completa todos los campos requeridos.", requestRepair: "Solicita tu reparación", chatWhatsApp: "Chatea por WhatsApp", cookieConsent: "Este sitio web utiliza cookies para mejorar la experiencia del usuario. Al utilizar nuestro sitio web, aceptas todas las cookies de acuerdo con nuestra ", cookiePolicyLink: "1234.html", cookieAccept: "Aceptar", cookieReject: "Rechazar", manageCookies: "Gestionar Cookies", cookiePolicyText: "Política de Cookies" } // Added cookiePolicyText
+        text: { defaultUbicacion: "Selecciona una ubicación", defaultElectrodomestico: "Selecciona uno", darkMode: "Modo Oscuro", lightMode: "Modo Claro", sending: "Enviando...", viewBrands: "Ver Marcas", aboutUs: "Sobre Nosotros", domestico: "Doméstico", industrial: "Industrial", formSuccess: "¡Gracias! Tu solicitud ha sido enviada. Nos pondremos en contacto contigo pronto.", formError: "Hubo un error al enviar tu solicitud. Por favor, inténtalo de nuevo más tarde.", validationError: "Por favor, completa todos los campos requeridos.", requestRepair: "Solicita tu reparación", chatWhatsApp: "Chatea por WhatsApp", cookieConsent: "Este sitio web utiliza cookies para mejorar la experiencia del usuario. Al utilizar nuestro sitio web, aceptas todas las cookies de acuerdo con nuestra ", cookiePolicyLink: "1234.html", cookieAccept: "Aceptar", cookieReject: "Rechazar", manageCookies: "Gestionar Cookies", cookiePolicyText: "Política de Cookies" }
       },
       ca: {
         placeholder: { nombre: "El teu nom", telefono: "+34 600 000 000", email: "el teu@correu.com", mensaje: "Descriu el problema" },
-        text: { defaultUbicacion: "Selecciona una ubicació", defaultElectrodomestico: "Selecciona un", darkMode: "Mode Fosc", lightMode: "Mode Clar", sending: "Enviant...", viewBrands: "Veure Marques", aboutUs: "Sobre Nosaltres", domestico: "Domèstic", industrial: "Industrial", formSuccess: "Gràcies! La teva sol·licitud ha estat enviada. Ens posarem en contacte amb tu aviat.", formError: "Hi ha hagut un error en enviar la teva sol·licitud. Si us plau, torna a intentar-ho més tard.", validationError: "Si us plau, completa tots els camps requerits.", requestRepair: "Sol·licita la teva reparació", chatWhatsApp: "Xateja per WhatsApp", cookieConsent: "Aquest lloc web utilitza galetes per millorar l'experiència de l'usuari. En utilitzar el nostre lloc web, acceptes totes les galetes d'acord amb la nostra ", cookiePolicyLink: "1234.html", cookieAccept: "Acceptar", cookieReject: "Rebutjar", manageCookies: "Gestionar Galetes", cookiePolicyText: "Política de Galetes" } // Added cookiePolicyText
+        text: { defaultUbicacion: "Selecciona una ubicació", defaultElectrodomestico: "Selecciona un", darkMode: "Mode Fosc", lightMode: "Mode Clar", sending: "Enviant...", viewBrands: "Veure Marques", aboutUs: "Sobre Nosaltres", domestico: "Domèstic", industrial: "Industrial", formSuccess: "Gràcies! La teva sol·licitud ha estat enviada. Ens posarem en contacte amb tu aviat.", formError: "Hi ha hagut un error en enviar la teva sol·licitud. Si us plau, torna a intentar-ho més tard.", validationError: "Si us plau, completa tots els camps requerits.", requestRepair: "Sol·licita la teva reparació", chatWhatsApp: "Xateja per WhatsApp", cookieConsent: "Aquest lloc web utilitza galetes per millorar l'experiència de l'usuari. En utilitzar el nostre lloc web, acceptes totes les galetes d'acord amb la nostra ", cookiePolicyLink: "1234.html", cookieAccept: "Acceptar", cookieReject: "Rebutjar", manageCookies: "Gestionar Galetes", cookiePolicyText: "Política de Galetes" }
       },
       va: {
         placeholder: { nombre: "El teu nom", telefono: "+34 600 000 000", email: "el teu@correu.com", mensaje: "Descriu el problema" },
-        text: { defaultUbicacion: "Selecciona una ubicació", defaultElectrodomestico: "Selecciona un", darkMode: "Mode Fosc", lightMode: "Mode Clar", sending: "Enviant...", viewBrands: "Veure Marques", aboutUs: "Sobre Nosaltres", domestico: "Doméstico", industrial: "Industrial", formSuccess: "Gràcies! La teua sol·licitud ha sigut enviada. Ens posarem en contacte amb tu prompte.", formError: "Hi ha hagut un error en enviar la teua sol·licitud. Per favor, intenta-ho de nou més tard.", validationError: "Per favor, completa tots els camps requerits.", requestRepair: "Sol·licita la teua reparació", chatWhatsApp: "Chateja per WhatsApp", cookieConsent: "Aquest lloc web utilitza galetes per millorar l'experiència de l'usuari. En utilitzar el nostre lloc web, acceptes totes les galetes d'acuerdo con la nostra ", cookiePolicyLink: "1234.html", cookieAccept: "Acceptar", cookieReject: "Rebutjar", manageCookies: "Gestionar Galetes", cookiePolicyText: "Política de Galetes" } // Added cookiePolicyText
+        text: { defaultUbicacion: "Selecciona una ubicació", defaultElectrodomestico: "Selecciona un", darkMode: "Mode Fosc", lightMode: "Mode Clar", sending: "Enviant...", viewBrands: "Veure Marques", aboutUs: "Sobre Nosaltres", domestico: "Doméstico", industrial: "Industrial", formSuccess: "Gràcies! La teua sol·licitud ha sigut enviada. Ens posarem en contacte amb tu prompte.", formError: "Hi ha hagut un error en enviar la teua sol·licitud. Per favor, intenta-ho de nou més tard.", validationError: "Per favor, completa tots els camps requerits.", requestRepair: "Sol·licita la teua reparació", chatWhatsApp: "Chateja per WhatsApp", cookieConsent: "Aquest lloc web utilitza galetes per millorar l'experiència de l'usuari. En utilitzar el nostre lloc web, acceptes totes les galetes d'acuerdo con la nostra ", cookiePolicyLink: "1234.html", cookieAccept: "Acceptar", cookieReject: "Rebutjar", manageCookies: "Gestionar Galetes", cookiePolicyText: "Política de Galetes" }
       }
     };
     function updatePlaceholders(lang) {
@@ -1163,9 +1163,9 @@
         const cookieBanner = document.getElementById('cookie-banner');
         if (cookieBanner) {
             // Update text content
-            cookieBanner.querySelector('.cookie-content .lang-es').innerHTML = translations.es.text.cookieConsent + `<a href="/1234.html" target="_blank">${translations.es.text.cookiePolicyText}</a>.`; // Use cookiePolicyText for display
-            cookieBanner.querySelector('.cookie-content .lang-ca').innerHTML = translations.ca.text.cookieConsent + `<a href="/1234.html" target="_blank">${translations.ca.text.cookiePolicyText}</a>.`; // Use cookiePolicyText for display
-            cookieBanner.querySelector('.cookie-content .lang-va').innerHTML = translations.va.text.cookieConsent + `<a href="/1234.html" target="_blank">${translations.va.text.cookiePolicyText}</a>.`; // Use cookiePolicyText for display
+            cookieBanner.querySelector('.cookie-content .lang-es').innerHTML = translations.es.text.cookieConsent + `<a href="/erb-pruebaaas/1234.html" target="_blank">${translations.es.text.cookiePolicyText}</a>.`; // Use cookiePolicyText for display
+            cookieBanner.querySelector('.cookie-content .lang-ca').innerHTML = translations.ca.text.cookieConsent + `<a href="/erb-pruebaaas/1234.html" target="_blank">${translations.ca.text.cookiePolicyText}</a>.`; // Use cookiePolicyText for display
+            cookieBanner.querySelector('.cookie-content .lang-va').innerHTML = translations.va.text.cookieConsent + `<a href="/erb-pruebaaas/1234.html" target="_blank">${translations.va.text.cookiePolicyText}</a>.`; // Use cookiePolicyText for display
 
             // Update button text
             cookieBanner.querySelector('.accept-btn .lang-es').textContent = translations.es.text.cookieAccept;
@@ -1189,7 +1189,7 @@
         if (manageCookiesLinkVa) manageCookiesLinkVa.textContent = translations.va.text.manageCookies;
 
         // Also update the "Política de Cookies" link in the footer explicitly
-        document.querySelectorAll('footer a[href="/1234.html"]').forEach(link => {
+        document.querySelectorAll('footer a[href="/erb-pruebaaas/1234.html"]').forEach(link => {
              if (link.classList.contains('lang-es')) link.textContent = translations.es.text.cookiePolicyText;
              if (link.classList.contains('lang-ca')) link.textContent = translations.ca.text.cookiePolicyText;
              if (link.classList.contains('lang-va')) link.textContent = translations.va.text.cookiePolicyText;
